Bug 569586  - XPCOM compilation failure on mingw-w64 due to pointer to int cast loosing precision. r=benjamin